--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-three/drei": "^9.13.0",
     "@react-three/fiber": "^8.0.22",
     "@react-three/postprocessing": "^2.3.2",
+    "framer-motion": "^6.3.11",
     "next": "12.1.6",
     "react": "18.1.0",
     "react-dom": "18.1.0",
@@ -28,6 +29,7 @@
     "@types/node": "17.0.41",
     "@types/react": "18.0.12",
     "@types/react-dom": "18.0.5",
+    "@types/three": "^0.141.0",
     "@typescript-eslint/eslint-plugin": "^5.27.1",
     "@typescript-eslint/parser": "^5.27.1",
     "eslint": "8.17.0",
